# vitaki-fork

./: .gitignore  CLAUDE.md  Dockerfile  README.md  VitakiForkv0.1.51.vpk  VitakiForkv0.1.52.vpk  VitakiForkv0.1.53.vpk  VitakiForkv0.1.54.vpk  VitakiForkv0.1.55.vpk  VitakiForkv0.1.56.vpk  VitakiForkv0.1.57.vpk  VitakiForkv0.1.59.vpk  VitakiForkv0.1.61.vpk  VitakiForkv0.1.62.vpk  VitakiForkv0.1.63.vpk  VitakiForkv0.1.64.vpk  VitakiForkv0.1.65.vpk  VitakiForkv0.1.66.vpk  VitakiForkv0.1.68.vpk  VitakiForkv0.1.70.vpk  VitakiForkv0.1.72.vpk  VitakiForkv0.1.73.vpk  VitakiForkv0.1.74.vpk  VitakiForkv0.1.75.vpk  VitakiForkv0.1.76.vpk  VitakiForkv0.1.77.vpk  VitakiForkv0.1.78.vpk  VitakiForkv0.1.80.vpk  VitakiForkv0.1.81.vpk
.claude/: settings.local.json
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: create_release.yml  release.yml
docs/: INCOMPLETE_FEATURES.md  LATENCY_ANALYSIS.md  LATENCY_QUICK_WINS.md  VITAKI_BACKEND_API.md  WIFI_OPTIMIZATION.md
docs/ai/: BACKEND_AUDIT.md  BUILD_SYSTEM_SETUP.md  PHASE1_COMPLETION_REPORT.md  PHASE2_COMPLETE_SUMMARY.md  PHASE2_IMPLEMENTATION_PLAN.md  PHASE2_PROGRESS.md  PHASE2_SCREEN_REDESIGN_SPEC.md  PHASE3_PLAN.md  PROJECT_STRUCTURE_ANALYSIS.md  ROADMAP.md  UI_DESIGN_COMPLETION_SUMMARY.md  UI_DEVELOPMENT_GUIDE.md  UI_FINAL_SPECIFICATION.md  VITARPS5_UI_IMPLEMENTATION_SPEC.md
docs/ai/current_status/: ARCHIVED.md  DONE.md  FEATURE_SUMMARY.md  TECHNICAL_ACHIEVEMENTS.md  TODO.md
tools/: build.sh
vita/: .dockerignore  CMakeLists.txt
vita/include/: config.h  version.h  video.h
vita/res/livearea/contents/: template.xml
vita/src/: audio.c  config.c  host.c  main.c  ui.c  video.c
vita/src/audio/: audio_decoder.c  audio_decoder.h
vita/src/chiaki/: chiaki_base64_vitaki.c  chiaki_base64_vitaki.h  chiaki_common.c  chiaki_common.h  chiaki_controller.c  chiaki_controller.h  chiaki_ctrl_impl.c  chiaki_ctrl_vitaki.h  chiaki_ecdh_vitaki.c  chiaki_ecdh_vitaki.h  chiaki_gkcrypt_vitaki.c  chiaki_gkcrypt_vitaki.h  chiaki_http_vitaki.c  chiaki_http_vitaki.h  chiaki_integration.c  chiaki_integration.h  chiaki_launchspec.c  chiaki_launchspec.h  chiaki_log.c  chiaki_log.h  chiaki_missing_functions.c  chiaki_random.c  chiaki_random.h  chiaki_receivers.c  chiaki_regist_vitaki.c  chiaki_regist_vitaki.h  chiaki_rpcrypt_vitaki.c  chiaki_rpcrypt_vitaki.h  chiaki_rudp.c  chiaki_rudp.h  chiaki_session.c  chiaki_session.h  chiaki_sock.c  chiaki_sock.h  chiaki_streamconnection.c  chiaki_streamconnection.h  chiaki_streamconnection_vitaki.c  chiaki_stubs.h  chiaki_target_utils.c  chiaki_thread_vita.c  (+16 more)
vita/src/console/: vitaki_bridge.c  vitaki_bridge.h
vita/src/core/: console_registration.c  console_registration.h  console_storage.c  console_storage.h  console_types.h  error_codes.h  profile_storage.c  profile_storage.h  ps5_session_state.c  ps5_session_state.h  registration_cache.c  registration_cache.h  session_manager.c  session_manager.h  settings.c  settings.h  version.h  vitarps5.c  vitarps5.h
vita/src/discovery/: discovery.c  discovery.h  ps5_discovery.c  ps5_discovery.h
vita/src/network/: connect_local.c  control_plane.c  control_plane.h  network_manager.c  network_manager.h  network_stubs.c  session_init.c  session_init.h  session_keepalive.c  session_keepalive.h  takion.c  takion.h  wake.c  wake.h
vita/src/system/: vita_system_info.c  vita_system_info.h
vita/src/ui/: console_state_thread.c  console_state_thread.h  ui_components.c  ui_components.h  ui_controller.c  ui_controller.h  ui_core.c  ui_core.h  ui_dashboard.c  ui_dashboard.h  ui_navigation.c  ui_navigation.h  ui_profile.c  ui_profile.h  ui_psn_login.c  ui_psn_login.h  ui_registration.c  ui_registration.h  ui_settings.c  ui_settings.h  ui_streaming.c  ui_streaming.h  vita2d_ui.c  vita2d_ui.h
vita/src/utils/: diagnostics.c  diagnostics.h  error_strings.c  helpers.c  helpers.h  http_client.c  http_client.h  json_parser.c  json_parser.h  logger.c  logger.h  protocol_retry.c  protocol_retry.h
